InventoryManagement/force-app/src/objects/Cycle_Count_Version__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Rejected__c</fullName>
        <label>Approved/ Rejected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle_Count_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cycle Count Date</label>
        <referenceTo>Cycle_Count_Date__c</referenceTo>
        <relationshipName>Cycle_Count_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle_Count_Records2__c</fullName>
        <label>Cycle Count Records2</label>
        <summaryForeignKey>Cycle_Count__c.Cycle_Count_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipName>Cycle_Count_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Cycle_Count_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_count_matched__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>SP Count Matched?</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Cycle Count Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Active__c</columns>
        <columns>SP_count_matched__c</columns>
        <columns>Location__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cycle Count Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Count Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>